add vercel link in readme

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           <div class="currency-option-flag">
             <div class="divider"></div>
             <img src="./assets/Bandeira.svg" alt="">
-            <span>USD</span>
-            <img src="./assets/chevron-down.svg" alt="">
+            <select name="" id="">
+              <option value="">USD</option>
+              <option value="">BRL</option>
+            </select>
           </div>
         </div>
         <img class="arrows-divider"src="./assets/arrows-exchange.svg" alt="" class="icon">
@@ -32,8 +34,10 @@
           <div class="currency-option-flag">
             <div class="divider"></div>
             <img src="./assets/Brazil_flag.svg" alt="">
-            <span>BRL</span>
-            <img src="./assets/chevron-down.svg" alt="">
+            <select name="" id="">
+              <option value="">USD</option>
+              <option value="" selected>BRL</option>
+            </select>
           </div>
         </div>
       </div>
