--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <h2>Conversor de moedas</h2>
       <div class="currency">
         <div class="currency-option " >
-          <div class="currency-option-amount">$ 1.000,00 </div>
+          <div class="currency-option-amount">
+            <input type="text" placeholder="$ 1000,00">  
+          </div>
           <div class="currency-option-flag">
             <div class="divider"></div>
             <img src="./assets/Bandeira.svg" alt="">
@@ -30,7 +32,7 @@
         </div>
         <img class="arrows-divider"src="./assets/arrows-exchange.svg" alt="" class="icon">
         <div class="currency-option">
-          <div class="currency-option-amount">R$5.148,00</div>
+          <div class="currency-option-amount"><input type="text" placeholder="R$ 5.148,00"> </div>
           <div class="currency-option-flag">
             <div class="divider"></div>
             <img src="./assets/Brazil_flag.svg" alt="">
