add vercel link in readme

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     </section>
     <section class="exchange-rate">
       <h2>Taxa de câmbio</h2>
-      <img id='chart'src="./assets/Chart.svg" alt="">
+      <div class="img">
+        <img id='chart'src="./assets/Chart.svg" alt="" resized='contain'>
+      </div>
     </section>
   </main>
 </div>
